--- a/package.json
+++ b/package.json
@@ -1,21 +1,23 @@
 {
-  "name": "xmldom-alpha",
+  "name": "xmldom-qsa",
   "version": "0.1.28",
   "description": "A W3C Standard XML DOM(Level2 CORE) implementation and parser(DOMParser/XMLSerializer).",
   "keywords": ["w3c","dom","xml","parser","javascript","DOMParser","XMLSerializer"],
   "author": "jindw <jindw@xidea.org> (http://www.xidea.org)",
-  "homepage": "https://github.com/jindw/xmldom",
-  "repository": {"type": "git","url": "git://github.com/jindw/xmldom.git"},
+  "homepage": "https://github.com/zeligzhou/xmldom-qsa",
+  "repository": {"type": "git","url": "git@github.com:zeligzhou/xmldom-qsa.git"},
   "main": "./dom-parser.js",
   "scripts" : { "test": "proof platform win32 && proof test */*/*.t.js || t/test" },
   "engines": {"node": ">=0.1"},
-  "dependencies": {},
+  "dependencies": {"nwmatcher": "^1.4.1"},
   "devDependencies": { "proof": "0.0.28" },
-  "maintainers": [{"name": "jindw","email": "jindw@xidea.org","url": "http://www.xidea.org"}],
+  "maintainers": [{"name": "jindw","email": "jindw@xidea.org","url": "http://www.xidea.org"},
+                 {"name" : "Zelig Zhou","email" : "zeligzhou@gmail.com","web" : "https://github.com/zeligzhou"}],
   "contributors": [
     {"name" : "Yaron Naveh","email" : "yaronn01@gmail.com","web" : "http://webservices20.blogspot.com/"},
     {"name" : "Harutyun Amirjanyan","email" : "amirjanyan@gmail.com","web" : "https://github.com/nightwing"},
-    {"name" : "Alan Gutierrez","email" : "alan@prettyrobots.com","web" : "http://www.prettyrobots.com/"}
+    {"name" : "Alan Gutierrez","email" : "alan@prettyrobots.com","web" : "http://www.prettyrobots.com/"},
+    {"name" : "Zelig Zhou","email" : "zeligzhou@gmail.com","web" : "https://github.com/zeligzhou"}
   ],
   "bugs": {"email": "jindw@xidea.org","url": "http://github.com/jindw/xmldom/issues"},
   "license": "(LGPL-2.0 or MIT)"
